{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 119,
  "lineage": "67e6df56-26ce-f455-f9a9-e620d710d51a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09230a6df2074ee87",
            "association_id": "eipassoc-0d77eb8d88735413f",
            "domain": "vpc",
            "id": "eipalloc-09230a6df2074ee87",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04ef8972c44d3c031",
            "private_dns": "ip-11-0-0-76.ec2.internal",
            "private_ip": "11.0.0.76",
            "public_dns": "ec2-44-199-53-198.compute-1.amazonaws.com",
            "public_ip": "44.199.53.198",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "env": "terraform_testing"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0092bd6ab84832469",
            "arn": "arn:aws:ec2:us-east-1:176906365059:instance/i-0369cfa8c8e6d42b8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0369cfa8c8e6d42b8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "agomez",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03a41fc9ef333d410",
            "private_dns": "ip-11-0-0-96.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.0.96",
            "public_dns": "ec2-44-207-3-134.compute-1.amazonaws.com",
            "public_ip": "44.207.3.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-053998b785caced1a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ea3075f0650b8442",
            "tags": {
              "Name": "terraform_testing-EC2"
            },
            "tags_all": {
              "Name": "terraform_testing-EC2",
              "env": "terraform_testing"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0819e9b2aeeb29c49"
            ]
          },
          "dependencies": [
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:internet-gateway/igw-00413ef89b5450873",
            "id": "igw-00413ef89b5450873",
            "owner_id": "176906365059",
            "tags": {
              "Name": "terraform_testing-IGW"
            },
            "tags_all": {
              "Name": "terraform_testing-IGW",
              "env": "terraform_testing"
            },
            "vpc_id": "vpc-0bdd237aac8efc792"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09230a6df2074ee87",
            "association_id": "eipassoc-0d77eb8d88735413f",
            "connectivity_type": "public",
            "id": "nat-0d8dcfdbaf9fe96f2",
            "network_interface_id": "eni-04ef8972c44d3c031",
            "private_ip": "11.0.0.76",
            "public_ip": "44.199.53.198",
            "subnet_id": "subnet-0ea3075f0650b8442",
            "tags": {
              "Name": "terraform_testing-nat"
            },
            "tags_all": {
              "Name": "terraform_testing-nat",
              "env": "terraform_testing"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03a401478ecc3c35a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d8dcfdbaf9fe96f2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03a401478ecc3c35a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.main_nat_gw",
            "aws_route_table.private_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00413ef89b5450873",
            "id": "r-rtb-0b701828b6cd599071080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b701828b6cd59907",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:route-table/rtb-03a401478ecc3c35a",
            "id": "rtb-03a401478ecc3c35a",
            "owner_id": "176906365059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d8dcfdbaf9fe96f2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_testing-private-rt"
            },
            "tags_all": {
              "Name": "terraform_testing-private-rt",
              "env": "terraform_testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdd237aac8efc792"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:route-table/rtb-0b701828b6cd59907",
            "id": "rtb-0b701828b6cd59907",
            "owner_id": "176906365059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00413ef89b5450873",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_testing-public-rt"
            },
            "tags_all": {
              "Name": "terraform_testing-public-rt",
              "env": "terraform_testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdd237aac8efc792"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a91a4c6200ca4d81",
            "route_table_id": "rtb-03a401478ecc3c35a",
            "subnet_id": "subnet-08ae706779a0bf391"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0853b47603c1f2b92",
            "route_table_id": "rtb-03a401478ecc3c35a",
            "subnet_id": "subnet-0c2f8053d17edb897"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a337457f3dd7924",
            "route_table_id": "rtb-0b701828b6cd59907",
            "subnet_id": "subnet-0ea3075f0650b8442"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afb2f38589721d91",
            "route_table_id": "rtb-0b701828b6cd59907",
            "subnet_id": "subnet-084af13d9ccfe4c1e"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-08ae706779a0bf391",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ae706779a0bf391",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_testing-Private-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "terraform_testing-Private-Subnet-us-east-1a",
              "env": "terraform_testing"
            },
            "vpc_id": "vpc-0bdd237aac8efc792"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-0c2f8053d17edb897",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2f8053d17edb897",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_testing-Private-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "terraform_testing-Private-Subnet-us-east-1b",
              "env": "terraform_testing"
            },
            "vpc_id": "vpc-0bdd237aac8efc792"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-0ea3075f0650b8442",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "11.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea3075f0650b8442",
            "ipv6_cidr_block": "2600:1f18:36a0:e900::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0a1f73e618f27332c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_testing-Public-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "terraform_testing-Public-Subnet-us-east-1a",
              "env": "terraform_testing"
            },
            "vpc_id": "vpc-0bdd237aac8efc792"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-084af13d9ccfe4c1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084af13d9ccfe4c1e",
            "ipv6_cidr_block": "2600:1f18:36a0:e901::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-09d89a94553bd02c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_testing-Public-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "terraform_testing-Public-Subnet-us-east-1b",
              "env": "terraform_testing"
            },
            "vpc_id": "vpc-0bdd237aac8efc792"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:vpc/vpc-0bdd237aac8efc792",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0f228811bf23a6153",
            "default_route_table_id": "rtb-031d74bd5044bfd3b",
            "default_security_group_id": "sg-0819e9b2aeeb29c49",
            "dhcp_options_id": "dopt-01662f52edb1b9c77",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bdd237aac8efc792",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0a4cac323f95f22f9",
            "ipv6_cidr_block": "2600:1f18:36a0:e900::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-031d74bd5044bfd3b",
            "owner_id": "176906365059",
            "tags": {
              "Name": "agomez"
            },
            "tags_all": {
              "Name": "agomez",
              "env": "terraform_testing"
            }
          }
        }
      ]
    }
  ]
}